--- a/work/highway-west-vacations-responsive-html-email.html
+++ b/work/highway-west-vacations-responsive-html-email.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 17 2021 04:51:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a677d70a122ad7b6760fe" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -45,18 +45,20 @@
         <div class="stick-content-paragraph-div">
           <p>Designed a responsive HTML email and tested with multiple email providers and devices. Started with a template but hand coded some elements to match approved layout.<br><br><strong>Role:</strong> Graphic Designer<br><strong>Programs:</strong> Adobe Photoshop &amp; Sublime Text Editor<br><strong>Year:</strong> 2015</p>
         </div>
-        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
-          <div class="text-block">Back</div>
-        </a>
       </div>
-      <div class="image-div"><img src="../images/HWV-HTML-Email-Design.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 4186px) 43vw, 1800px" srcset="../images/HWV-HTML-Email-Design-p-500.png 500w, ../images/HWV-HTML-Email-Design-p-800.png 800w, ../images/HWV-HTML-Email-Design-p-1080.png 1080w, ../images/HWV-HTML-Email-Design-p-1600.png 1600w, ../images/HWV-HTML-Email-Design.png 1800w" alt="" class="image-2"><img src="../images/Screen-Shot-2021-09-21-at-6.21.59-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 4431px) 44vw, 1950px" srcset="../images/Screen-Shot-2021-09-21-at-6.21.59-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.21.59-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.21.59-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.21.59-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.21.59-PM.png 1950w" alt="" class="image-2"></div>
+      <div class="image-div">
+        <div class="scroll-indicator">
+          <a href="#Footer" class="scroll-link-black w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon" class="scroll-down">
+            <div class="scroll-text">Scroll</div>
+          </a>
+        </div><img src="../images/HWV-HTML-Email-Design.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/HWV-HTML-Email-Design-p-500.png 500w, ../images/HWV-HTML-Email-Design-p-800.png 800w, ../images/HWV-HTML-Email-Design-p-1080.png 1080w, ../images/HWV-HTML-Email-Design-p-1600.png 1600w, ../images/HWV-HTML-Email-Design.png 1800w" alt="" class="image-2"><img src="../images/Screen-Shot-2021-09-21-at-6.21.59-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-6.21.59-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.21.59-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.21.59-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.21.59-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.21.59-PM.png 1950w" alt="" class="image-2">
+      </div>
     </div>
-    <div class="columns w-row">
-      <div class="column-2 w-col w-col-6"></div>
-      <div class="column-3 w-col w-col-6"></div>
-    </div>
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+      <div class="text-block">Back</div>
+    </a>
   </div>
-  <div class="footer wf-section">
+  <div id="Footer" class="footer wf-section">
     <div class="footer-div">
       <p class="copyright">© Copyright 2021 Vanessa Salinas - All Rights Reserved</p>
     </div>
