--- a/work/planning-and-urban-design-website.html
+++ b/work/planning-and-urban-design-website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Nov 20 2021 00:20:28 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a57cdc01f0f751ac5877b" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -45,12 +45,9 @@
         <div class="stick-content-paragraph-div">
           <p>Worked closely with the PUD department stakeholders, product manager, UX designers and front end developers to create visuals based on sketches and requirements from the department.<br><strong><br>Role:</strong> UI Designer<br><strong>Programs:</strong> Adobe XD, Illustrator &amp; Photoshop<br><strong>Year:</strong> 2020<br><br><strong>Challenges:</strong> Working with a department who had their own ideas and mockups of what they wanted their website to look like but with no website standards used. Tasked with bringing these ideas under the City of Dallas style guide standards. Including fonts, colors, components and compliant with web accessibility.<br><br><strong>Project Outcome:</strong> Through close collaboration and an extensive iterative process the department was very satisfied with the final product and expressed that it met their overall purpose of a creative, dynamic and focused online presence to expand the reach of the department’s message, publications, support efforts in educating, informing and encouraging involvement in planning for the city’s future.</p>
         </div>
-        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon">
-          <div class="text-block">Back</div>
-        </a>
       </div>
       <div class="image-div">
-        <div class="sticky-contact-scroll-indicator">
+        <div class="scroll-indicator">
           <a href="#Footer" class="scroll-link-black w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon" class="scroll-down">
             <div class="scroll-text">Scroll</div>
           </a>
@@ -132,7 +129,7 @@
         </a>
       </div>
     </div>
-    <a href="javascript:history.back();" class="backmobile w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 24px, 100vw" alt="Left Arrow Icon">
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
       <div class="text-block">Back</div>
     </a>
   </div>
