--- a/work/resilient-dallas-website-design.html
+++ b/work/resilient-dallas-website-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 17 2021 04:51:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a6233296cc1cbf9e25fc8" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -43,20 +43,112 @@
           <h4>UX/UI Design</h4>
         </div>
         <div class="stick-content-paragraph-div">
-          <p>Worked closely with the Resilient Dallas stakeholders, product manager and front end developer to turn an 80 page strategy document into a user friendly website.<br><br><strong>Role:</strong> UX/UI Designer<br><strong>Programs:</strong> Adobe XD, Illustrator &amp; Photoshop<br><strong>Year:</strong> 2019-2020</p>
+          <p>Worked closely with the Resilient Dallas stakeholders, product manager and front end developer to turn an 80 page strategy document into a user friendly website.<br><br><strong>Role:</strong> UX/UI Designer<br><strong>Programs:</strong> Adobe XD, Illustrator &amp; Photoshop<br><strong>Year:</strong> 2019-2020<br><br><strong>Challenges:</strong> Taking an 80 page document that was created by a third party and converting it into easy to understand and accessible web pages under the City of Dallas style guide standards.<br><br><strong>Project Outcome:</strong> The final web pages have served as a place of accountability by providing a live status of each goal set by this strategic document.</p>
         </div>
-        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
-          <div class="text-block">Back</div>
+      </div>
+      <div class="image-div">
+        <div class="scroll-indicator">
+          <a href="#Footer" class="scroll-link-black w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon" class="scroll-down">
+            <div class="scroll-text">Scroll</div>
+          </a>
+        </div>
+        <a href="#" class="w-inline-block w-lightbox"><img src="../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 7226px) 46vw, 3324px" srcset="../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png 3324w" alt="A preview of how to read the document provided from the client" class="image-2">
+          <script type="application/json" class="w-json">{
+  "items": [
+    {
+      "width": 3324,
+      "caption": "",
+      "height": 2204,
+      "fileName": "614a63470d8f5875fdb59780_Screen Shot 2021-09-21 at 5.56.28 PM.png",
+      "origFileName": "Screen Shot 2021-09-21 at 5.56.28 PM.png",
+      "url": "../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png",
+      "_id": "614a63470d8f5875fdb59780",
+      "type": "image",
+      "fileSize": 2847258
+    }
+  ],
+  "group": "Resilient"
+}</script>
+        </a>
+        <a href="#" class="w-inline-block w-lightbox"><img src="../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 7226px) 46vw, 3324px" srcset="../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png 3324w" alt="A preview of the first goal initiatives, actions and resources" class="image-2">
+          <script type="application/json" class="w-json">{
+  "items": [
+    {
+      "width": 3324,
+      "caption": "",
+      "height": 2204,
+      "fileName": "614a635b7d60766f960369e6_Screen Shot 2021-09-21 at 5.56.55 PM.png",
+      "origFileName": "Screen Shot 2021-09-21 at 5.56.55 PM.png",
+      "url": "../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png",
+      "_id": "614a635b7d60766f960369e6",
+      "type": "image",
+      "fileSize": 2945287
+    }
+  ],
+  "group": "Resilient"
+}</script>
+        </a>
+        <a href="#" class="w-inline-block w-lightbox"><img src="../images/Homepage---Desktop.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Homepage---Desktop-p-500.jpeg 500w, ../images/Homepage---Desktop-p-800.jpeg 800w, ../images/Homepage---Desktop-p-1080.jpeg 1080w, ../images/Homepage---Desktop.jpg 1440w" alt="A mockup of the final landing page" class="image-2">
+          <script type="application/json" class="w-json">{
+  "items": [
+    {
+      "width": 1440,
+      "caption": "",
+      "height": 2484,
+      "fileName": "614a6370dba87179276bd143_Homepage - Desktop.jpg",
+      "origFileName": "Homepage - Desktop.jpg",
+      "url": "../images/Homepage---Desktop.jpg",
+      "_id": "614a6370dba87179276bd143",
+      "type": "image",
+      "fileSize": 1141469
+    }
+  ],
+  "group": "Resilient"
+}</script>
+        </a>
+        <a href="#" class="w-inline-block w-lightbox"><img src="../images/Goals-with-Top-All-Goals-Data.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Goals-with-Top-All-Goals-Data-p-500.jpeg 500w, ../images/Goals-with-Top-All-Goals-Data-p-800.jpeg 800w, ../images/Goals-with-Top-All-Goals-Data-p-1080.jpeg 1080w, ../images/Goals-with-Top-All-Goals-Data.jpg 1440w" alt="A mockup of the goals page which lists each goal with a status and quick description" class="image-2">
+          <script type="application/json" class="w-json">{
+  "items": [
+    {
+      "width": 1440,
+      "caption": "",
+      "height": 3492,
+      "fileName": "614a6381937d200a5a46a580_Goals with Top All Goals Data.jpg",
+      "origFileName": "Goals with Top All Goals Data.jpg",
+      "url": "../images/Goals-with-Top-All-Goals-Data.jpg",
+      "_id": "614a6381937d200a5a46a580",
+      "type": "image",
+      "fileSize": 990783
+    }
+  ],
+  "group": "Resilient"
+}</script>
+        </a>
+        <a href="#" class="w-inline-block w-lightbox"><img src="../images/Initiative-and-Action-Template---Desktop.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Initiative-and-Action-Template---Desktop-p-500.jpeg 500w, ../images/Initiative-and-Action-Template---Desktop-p-800.jpeg 800w, ../images/Initiative-and-Action-Template---Desktop-p-1080.jpeg 1080w, ../images/Initiative-and-Action-Template---Desktop.jpg 1440w" alt="A mockup of the goals details template that includes all of its initiatives, actions and resources" class="image-2">
+          <script type="application/json" class="w-json">{
+  "items": [
+    {
+      "width": 1440,
+      "caption": "",
+      "height": 2321,
+      "fileName": "614a639599e1a6fe104b3c56_Initiative and Action Template - Desktop.jpg",
+      "origFileName": "Initiative and Action Template - Desktop.jpg",
+      "url": "../images/Initiative-and-Action-Template---Desktop.jpg",
+      "_id": "614a639599e1a6fe104b3c56",
+      "type": "image",
+      "fileSize": 717594
+    }
+  ],
+  "group": "Resilient"
+}</script>
         </a>
       </div>
-      <div class="image-div"><img src="../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png" loading="lazy" sizes="100vw" srcset="../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-5.56.28-PM.png 3324w" alt="" class="image-2"><img src="../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png" loading="lazy" sizes="100vw" srcset="../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-5.56.55-PM.png 3324w" alt="" class="image-2"><img src="../images/Homepage---Desktop.jpg" loading="lazy" sizes="100vw" srcset="../images/Homepage---Desktop-p-500.jpeg 500w, ../images/Homepage---Desktop-p-800.jpeg 800w, ../images/Homepage---Desktop-p-1080.jpeg 1080w, ../images/Homepage---Desktop.jpg 1440w" alt="" class="image-2"><img src="../images/Goals-with-Top-All-Goals-Data.jpg" loading="lazy" sizes="100vw" srcset="../images/Goals-with-Top-All-Goals-Data-p-500.jpeg 500w, ../images/Goals-with-Top-All-Goals-Data-p-800.jpeg 800w, ../images/Goals-with-Top-All-Goals-Data-p-1080.jpeg 1080w, ../images/Goals-with-Top-All-Goals-Data.jpg 1440w" alt="" class="image-2"><img src="../images/Initiative-and-Action-Template---Desktop.jpg" loading="lazy" sizes="100vw" srcset="../images/Initiative-and-Action-Template---Desktop-p-500.jpeg 500w, ../images/Initiative-and-Action-Template---Desktop-p-800.jpeg 800w, ../images/Initiative-and-Action-Template---Desktop-p-1080.jpeg 1080w, ../images/Initiative-and-Action-Template---Desktop.jpg 1440w" alt="" class="image-2"></div>
     </div>
-    <div class="columns w-row">
-      <div class="column-2 w-col w-col-6"></div>
-      <div class="column-3 w-col w-col-6"></div>
-    </div>
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+      <div class="text-block">Back</div>
+    </a>
   </div>
-  <div class="footer wf-section">
+  <div id="Footer" class="footer wf-section">
     <div class="footer-div">
       <p class="copyright">© Copyright 2021 Vanessa Salinas - All Rights Reserved</p>
     </div>
