--- a/work/alpha-omega-social-media-logo-design.html
+++ b/work/alpha-omega-social-media-logo-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 17 2021 04:51:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a716b0d8f5859c3b5e68f" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -45,18 +45,14 @@
         <div class="stick-content-paragraph-div">
           <p><strong>Role:</strong> Graphic Designer<br><strong>Programs:</strong> Adobe Illustrator<br><strong>Year:</strong> 2013</p>
         </div>
-        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
-          <div class="text-block">Back</div>
-        </a>
       </div>
-      <div class="image-div"><img src="../images/6-p-700x500.jpg" loading="lazy" sizes="100vw" srcset="../images/6-p-700x500-p-500.jpeg 500w, ../images/6-p-700x500.jpg 700w" alt="" class="image-2"></div>
+      <div class="image-div"><img src="../images/6-p-700x500.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/6-p-700x500-p-500.jpeg 500w, ../images/6-p-700x500.jpg 700w" alt="" class="image-2"></div>
     </div>
-    <div class="columns w-row">
-      <div class="column-2 w-col w-col-6"></div>
-      <div class="column-3 w-col w-col-6"></div>
-    </div>
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+      <div class="text-block">Back</div>
+    </a>
   </div>
-  <div class="footer wf-section">
+  <div id="Footer" class="footer wf-section">
     <div class="footer-div">
       <p class="copyright">© Copyright 2021 Vanessa Salinas - All Rights Reserved</p>
     </div>
