--- a/work/city-of-dallas-financial-transparency-website.html
+++ b/work/city-of-dallas-financial-transparency-website.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 17 2021 04:51:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a69cdc01f0f7edcc5d810" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -45,18 +45,20 @@
         <div class="stick-content-paragraph-div">
           <p>Worked closely with Financial Transparency department stakeholders, product managers and front end developer to take project requirements and translate them into a user friendly website under the City&#x27;s brand.<br><br><strong>Role:</strong> UX/UI Designer<br><strong>Programs:</strong> Adobe XD<br><strong>Year:</strong> 2019</p>
         </div>
-        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
-          <div class="text-block">Back</div>
-        </a>
       </div>
-      <div class="image-div"><img src="../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 7723px) 47vw, 3630px" srcset="../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 3630w" alt="" class="image-2"><img src="../images/Financial-Transparency-Home---Desktop-v2.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Financial-Transparency-Home---Desktop-v2-p-500.png 500w, ../images/Financial-Transparency-Home---Desktop-v2-p-800.png 800w, ../images/Financial-Transparency-Home---Desktop-v2-p-1080.png 1080w, ../images/Financial-Transparency-Home---Desktop-v2.png 1440w" alt="" class="image-2"><img src="../images/Financial-Transparency-Home---Desktop.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 3428px) 42vw, 1440px" srcset="../images/Financial-Transparency-Home---Desktop-p-500.png 500w, ../images/Financial-Transparency-Home---Desktop-p-800.png 800w, ../images/Financial-Transparency-Home---Desktop-p-1080.png 1080w, ../images/Financial-Transparency-Home---Desktop.png 1440w" alt="" class="image-2"><img src="../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg" loading="lazy" sizes="100vw" srcset="../images/City-of-Dallas-Financial-Transparency-desktop-final-p-500.jpeg 500w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-800.jpeg 800w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-1080.jpeg 1080w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-1600.jpeg 1600w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-2000.jpeg 2000w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-2600.jpeg 2600w, ../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 2604w" alt="" class="image-2"></div>
+      <div class="image-div">
+        <div class="scroll-indicator">
+          <a href="#Footer" class="scroll-link-black w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon" class="scroll-down">
+            <div class="scroll-text">Scroll</div>
+          </a>
+        </div><img src="../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-2600.png 2600w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM-p-3200.png 3200w, ../images/Screen-Shot-2021-09-21-at-6.27.28-PM.png 3630w" alt="" class="image-2"><img src="../images/Financial-Transparency-Home---Desktop-v2.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Financial-Transparency-Home---Desktop-v2-p-500.png 500w, ../images/Financial-Transparency-Home---Desktop-v2-p-800.png 800w, ../images/Financial-Transparency-Home---Desktop-v2-p-1080.png 1080w, ../images/Financial-Transparency-Home---Desktop-v2.png 1440w" alt="" class="image-2"><img src="../images/Financial-Transparency-Home---Desktop.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Financial-Transparency-Home---Desktop-p-500.png 500w, ../images/Financial-Transparency-Home---Desktop-p-800.png 800w, ../images/Financial-Transparency-Home---Desktop-p-1080.png 1080w, ../images/Financial-Transparency-Home---Desktop.png 1440w" alt="" class="image-2"><img src="../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/City-of-Dallas-Financial-Transparency-desktop-final-p-500.jpeg 500w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-800.jpeg 800w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-1080.jpeg 1080w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-1600.jpeg 1600w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-2000.jpeg 2000w, ../images/City-of-Dallas-Financial-Transparency-desktop-final-p-2600.jpeg 2600w, ../images/City-of-Dallas-Financial-Transparency-desktop-final.jpg 2604w" alt="" class="image-2">
+      </div>
     </div>
-    <div class="columns w-row">
-      <div class="column-2 w-col w-col-6"></div>
-      <div class="column-3 w-col w-col-6"></div>
-    </div>
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+      <div class="text-block">Back</div>
+    </a>
   </div>
-  <div class="footer wf-section">
+  <div id="Footer" class="footer wf-section">
     <div class="footer-div">
       <p class="copyright">© Copyright 2021 Vanessa Salinas - All Rights Reserved</p>
     </div>
