--- a/work/mimis-nail-creations-logo-design.html
+++ b/work/mimis-nail-creations-logo-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 17 2021 04:51:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a5a73d85ad25e5ecb9ad5" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -45,18 +45,20 @@
         <div class="stick-content-paragraph-div">
           <p>Designed a logo and various printed items for a nail artist who specializes in unique, modern nail designs.<br><br><strong>Role:</strong> Graphic Designer<br><strong>Programs:</strong> Adobe Illustrator<br><strong>Year:</strong> 2019</p>
         </div>
-        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
-          <div class="text-block">Back</div>
-        </a>
       </div>
-      <div class="image-div"><img src="../images/1-Front-Square-MNC-Business-Card.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 38vw" srcset="../images/1-Front-Square-MNC-Business-Card-p-500.jpeg 500w, ../images/1-Front-Square-MNC-Business-Card.jpg 750w" alt="" class="image-2"><img src="../images/2-Back-Square-MNC-Business-Card.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 38vw" srcset="../images/2-Back-Square-MNC-Business-Card-p-500.jpeg 500w, ../images/2-Back-Square-MNC-Business-Card.jpg 750w" alt="" class="image-2"></div>
+      <div class="image-div">
+        <div class="scroll-indicator">
+          <a href="#Footer" class="scroll-link-black w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon" class="scroll-down">
+            <div class="scroll-text">Scroll</div>
+          </a>
+        </div><img src="../images/1-Front-Square-MNC-Business-Card.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/1-Front-Square-MNC-Business-Card-p-500.jpeg 500w, ../images/1-Front-Square-MNC-Business-Card.jpg 750w" alt="" class="image-2"><img src="../images/2-Back-Square-MNC-Business-Card.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/2-Back-Square-MNC-Business-Card-p-500.jpeg 500w, ../images/2-Back-Square-MNC-Business-Card.jpg 750w" alt="" class="image-2">
+      </div>
     </div>
-    <div class="columns w-row">
-      <div class="column-2 w-col w-col-6"></div>
-      <div class="column-3 w-col w-col-6"></div>
-    </div>
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+      <div class="text-block">Back</div>
+    </a>
   </div>
-  <div class="footer wf-section">
+  <div id="Footer" class="footer wf-section">
     <div class="footer-div">
       <p class="copyright">© Copyright 2021 Vanessa Salinas - All Rights Reserved</p>
     </div>
