--- a/work/mood-board-concepts-for-the-future-dallas-dot-gov.html
+++ b/work/mood-board-concepts-for-the-future-dallas-dot-gov.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 17 2021 18:01:37 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="61490e987a9d63129fdc95bb" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -45,22 +45,23 @@
         <div class="stick-content-paragraph-div">
           <p>Reimagine Dallas City Hall website from the ground up. New fonts, colors, style, service led design inspiration. Vision #1 is a lightweight, clean and bright vision. Vision #2 is rich and bold. Vision #3 is a vibrant, off the beaten path of a traditional look and feel of City services.<br><br><strong>Role:</strong> Visual Designer<br><strong>Programs:</strong> Adobe Illustrator, Adobe Photoshop, Adobe XD<br><strong>Year:</strong> 2021</p>
         </div>
-        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
-          <div class="text-block">Back</div>
-        </a>
       </div>
       <div class="image-div">
+        <div class="scroll-indicator">
+          <a href="#Footer" class="scroll-link-black w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon" class="scroll-down">
+            <div class="scroll-text">Scroll</div>
+          </a>
+        </div>
         <h5>Vision #1</h5><img src="../images/Mood-Board-v1.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Mood-Board-v1-p-500.jpeg 500w, ../images/Mood-Board-v1.jpg 1440w" alt="Mood Board for Vision 1" class="image-2">
         <h5>Vision #2</h5><img src="../images/Mood-Board-v2.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Mood-Board-v2-p-500.jpeg 500w, ../images/Mood-Board-v2.jpg 1440w" alt="Mood Board for Vision 2" class="image-2">
-        <h5>Vision #3</h5><img src="../images/Mood-Board-v3.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Mood-Board-v3.jpg 500w, ../images/Mood-Board-v3.jpg 800w, ../images/Mood-Board-v3.jpg 1080w, ../images/Mood-Board-v3.jpg 1440w" alt="Mood Board for Vision 3" class="image-2">
+        <h5>Vision #3</h5><img src="../images/Mood-Board-v3.jpg" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Mood-Board-v3-p-500.jpeg 500w, ../images/Mood-Board-v3-p-800.jpeg 800w, ../images/Mood-Board-v3-p-1080.jpeg 1080w, ../images/Mood-Board-v3.jpg 1440w" alt="Mood Board for Vision 3" class="image-2">
       </div>
     </div>
-    <div class="columns w-row">
-      <div class="column-2 w-col w-col-6"></div>
-      <div class="column-3 w-col w-col-6"></div>
-    </div>
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+      <div class="text-block">Back</div>
+    </a>
   </div>
-  <div class="footer wf-section">
+  <div id="Footer" class="footer wf-section">
     <div class="footer-div">
       <p class="copyright">© Copyright 2021 Vanessa Salinas - All Rights Reserved</p>
     </div>
