--- a/work/responsive-city-of-dallas-website-framework.html
+++ b/work/responsive-city-of-dallas-website-framework.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Wed Nov 17 2021 04:51:35 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a64402f7c6c70ad312717" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -45,18 +45,20 @@
         <div class="stick-content-paragraph-div">
           <p>In this project for Dallas City Hall, we took the current website and converted it into a responsive grid for a better user experience on tablet and mobile devices. We used the Bootstrap framework. My responsibilities on this project which was a team effort included:<br><br>• Design work of the responsive global and sub menus with web accessibility standard guidance <br>• Updating the hero image<br>• Assisting with the front end development of the homepage<br><br><strong>Role:</strong> UX/UI Designer &amp; Front End Assist<br><strong>Programs:</strong> Adobe XD &amp; Sharepoint Designer<br><strong>Year:</strong> 2017</p>
         </div>
-        <a href="javascript:history.back();" class="link-block-2 w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
-          <div class="text-block">Back</div>
-        </a>
       </div>
-      <div class="image-div"><img src="../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 3121px) 41vw, 1280px" srcset="../images/Screen-Shot-2021-09-21-at-6.09.59-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png 1280w" alt="" class="image-2"><img src="../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 5124px) 45vw, 2306px" srcset="../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png 2306w" alt="" class="image-2"></div>
+      <div class="image-div">
+        <div class="scroll-indicator">
+          <a href="#Footer" class="scroll-link-black w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="(max-width: 479px) 100vw, 24px" alt="Left Arrow Icon" class="scroll-down">
+            <div class="scroll-text">Scroll</div>
+          </a>
+        </div><img src="../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-6.09.59-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.09.59-PM.png 1280w" alt="" class="image-2"><img src="../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, 49vw" srcset="../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-500.png 500w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-800.png 800w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-1080.png 1080w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-1600.png 1600w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM-p-2000.png 2000w, ../images/Screen-Shot-2021-09-21-at-6.12.29-PM.png 2306w" alt="" class="image-2">
+      </div>
     </div>
-    <div class="columns w-row">
-      <div class="column-2 w-col w-col-6"></div>
-      <div class="column-3 w-col w-col-6"></div>
-    </div>
+    <a href="javascript:history.back();" class="backlink w-inline-block"><img src="../images/left-arrow.png" loading="lazy" width="24" height="24" srcset="../images/left-arrow-p-500.png 500w, ../images/left-arrow.png 512w" sizes="24px" alt="Left Arrow Icon">
+      <div class="text-block">Back</div>
+    </a>
   </div>
-  <div class="footer wf-section">
+  <div id="Footer" class="footer wf-section">
     <div class="footer-div">
       <p class="copyright">© Copyright 2021 Vanessa Salinas - All Rights Reserved</p>
     </div>
