--- a/work/dallas-city-hall-style-guide.html
+++ b/work/dallas-city-hall-style-guide.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 02 2021 05:42:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="60ca33936dec8bd86b065f1a" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -43,7 +43,9 @@
           <h4>Style Guide</h4>
         </div>
         <div class="stick-content-paragraph-div">
-          <p>Create a style guide from the current website brand to provide a better workflow, bring consistency, a better user experience and help build trust with the City&#x27;s overall web presence.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Sketch &amp; Frontify<br><strong>Year:</strong> 2017</p>
+          <p>Create a style guide from the current website brand to provide a better workflow, bring consistency, a better user experience and help build trust with the City&#x27;s overall web presence.<br><br><strong>Role:</strong> UI Designer<br><strong>Programs:</strong> Sketch &amp; Frontify<br><strong>Year:</strong> 2017<br><br><br>
+            <a href="https://cityofdallas.frontify.com/d/SjRBA4GEQCYH" target="_blank">Explore the Live Style Guide</a>
+          </p>
         </div>
       </div>
       <div class="image-div">
