--- a/work/resilient-dallas-website-design.html
+++ b/work/resilient-dallas-website-design.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Sat Nov 20 2021 01:30:53 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 02 2021 05:42:11 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="614a6233296cc1cbf9e25fc8" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -83,6 +83,23 @@
       "_id": "614a635b7d60766f960369e6",
       "type": "image",
       "fileSize": 2945287
+    }
+  ],
+  "group": "Resilient"
+}</script>
+        </a>
+        <a href="#" class="w-inline-block w-lightbox"><img src="../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png" loading="lazy" sizes="(max-width: 479px) 83vw, (max-width: 991px) 42vw, (max-width: 5839px) 46vw, 2686px" srcset="../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 500w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 800w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 1080w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 1600w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 2000w, ../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png 2686w" alt="A preview of the first goal initiatives, actions and resources" class="image-2">
+          <script type="application/json" class="w-json">{
+  "items": [
+    {
+      "type": "image",
+      "_id": "61a84ccbe6f2a434a1e5490d",
+      "fileName": "Resilient Dallas Wireframses and Initial Mockups.png",
+      "origFileName": "Resilient Dallas Wireframses and Initial Mockups.png",
+      "width": 2686,
+      "height": 1868,
+      "fileSize": 919711,
+      "url": "../images/Resilient-Dallas-Wireframses-and-Initial-Mockups.png"
     }
   ],
   "group": "Resilient"
