--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Thu Dec 02 2021 05:42:11 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Thu Dec 02 2021 18:09:07 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="606def14871f33430a720657" data-wf-site="606def14871f33b3fe720655">
 <head>
   <meta charset="utf-8">
@@ -153,6 +153,26 @@
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
+      <a href="work/dallas-city-hall-menu-redesign.html" class="work-link-block w-inline-block">
+        <div class="work1 work-dch-menu"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">UX/UI Design</h4>
+            <p class="paragraph-2">Dallas City Hall Menu</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
+        </div>
+      </a>
+      <a href="http://personalpest.com" target="_blank" class="work-link-block worklinkblock2col w-inline-block">
+        <div class="work1 work-personal-pest"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">UX/UI Design &amp; Development</h4>
+            <p class="paragraph-2">Personal Pest Control</p>
+          </div>
+          <div class="div-block-6"><img src="images/resize.png" loading="lazy" alt=""></div>
+        </div>
+      </a>
       <a href="work/mimis-nail-creations-logo-design.html" class="work-link-block w-inline-block">
         <div class="work1 work-mimis"></div>
         <div class="div-block-7">
@@ -173,17 +193,7 @@
           <div class="div-block-6"><img src="images/resize.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="http://personalpest.com" target="_blank" class="work-link-block w-inline-block">
-        <div class="work1 work-personal-pest"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">UX/UI Design &amp; Development</h4>
-            <p class="paragraph-2">Personal Pest Control</p>
-          </div>
-          <div class="div-block-6"><img src="images/resize.png" loading="lazy" alt=""></div>
-        </div>
-      </a>
-      <a href="http://approvedtoprint.com" target="_blank" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="http://approvedtoprint.com" target="_blank" class="work-link-block w-inline-block">
         <div class="work1 work-approved-to-print"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -193,12 +203,22 @@
           <div class="div-block-6"><img src="images/resize.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/city-of-dallas-its-tablecloth-design.html" class="work-link-block w-inline-block">
+      <a href="work/city-of-dallas-its-tablecloth-design.html" class="work-link-block worklinkblock2col w-inline-block">
         <div class="work1 work-tablecloth"></div>
         <div class="div-block-7">
           <div class="div-block-5">
             <h4 class="work-heading">Tablecloth Design</h4>
             <p class="paragraph-2">City of Dallas Information and Technology Services</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
+        </div>
+      </a>
+      <a href="work/resilient-dallas-website-design.html" class="work-link-block w-inline-block">
+        <div class="work1 work-opendata"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">UX/UI Design</h4>
+            <p class="paragraph-2">Resilient Dallas</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
@@ -213,32 +233,12 @@
           <div class="div-block-6"><img src="images/resize.png" loading="lazy" alt=""></div>
         </div>
       </a>
-      <a href="work/resilient-dallas-website-design.html" class="work-link-block w-inline-block">
-        <div class="work1 work-opendata"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">UX/UI Design</h4>
-            <p class="paragraph-2">Resilient Dallas</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
-        </div>
-      </a>
-      <a href="work/responsive-city-of-dallas-website-framework.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/responsive-city-of-dallas-website-framework.html" class="work-link-block w-inline-block">
         <div class="work1 work-dch-mobile"></div>
         <div class="div-block-7">
           <div class="div-block-5">
             <h4 class="work-heading">Responsive Design</h4>
             <p class="paragraph-2">City of Dallas (framework)</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
-        </div>
-      </a>
-      <a href="work/highway-west-vacations-responsive-html-email.html" class="work-link-block w-inline-block">
-        <div class="work1 work-hwv-email"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Responsive HTML Email Design &amp; Development</h4>
-            <p class="paragraph-2">Highway West Vacations</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
@@ -253,27 +253,17 @@
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
-      <a href="work/child-perfume-package-design.html" class="work-link-block w-inline-block">
-        <div class="work1 work-child-perfume-sample"></div>
+      <a href="work/highway-west-vacations-responsive-html-email.html" class="work-link-block w-inline-block">
+        <div class="work1 work-hwv-email"></div>
         <div class="div-block-7">
           <div class="div-block-5">
-            <h4 class="work-heading">Package Design</h4>
-            <p class="paragraph-2">Child Perfume</p>
+            <h4 class="work-heading">Responsive HTML Email Design &amp; Development</h4>
+            <p class="paragraph-2">Highway West Vacations</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
-      <a href="work/la-creme-box-art-design.html" class="work-link-block worklinkblock2col w-inline-block">
-        <div class="work1 work-la-creme-package"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Package Design</h4>
-            <p class="paragraph-2">La Creme</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
-        </div>
-      </a>
-      <a href="work/alpha-omega-social-media-logo-design.html" class="work-link-block w-inline-block">
+      <a href="work/alpha-omega-social-media-logo-design.html" class="work-link-block worklinkblock2col w-inline-block">
         <div class="work1 work-alpha-omega-logo"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -283,7 +273,27 @@
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
-      <a href="work/the-presidio-business-card-design.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/la-creme-box-art-design.html" class="work-link-block w-inline-block">
+        <div class="work1 work-la-creme-package"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">Package Design</h4>
+            <p class="paragraph-2">La Creme</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
+        </div>
+      </a>
+      <a href="work/child-perfume-package-design.html" class="work-link-block worklinkblock2col w-inline-block">
+        <div class="work1 work-child-perfume-sample"></div>
+        <div class="div-block-7">
+          <div class="div-block-5">
+            <h4 class="work-heading">Package Design</h4>
+            <p class="paragraph-2">Child Perfume</p>
+          </div>
+          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
+        </div>
+      </a>
+      <a href="work/the-presidio-business-card-design.html" class="work-link-block w-inline-block">
         <div class="work1 work-folded-business-card"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -293,7 +303,7 @@
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
-      <a href="work/la-creme-tag-design.html" class="work-link-block w-inline-block">
+      <a href="work/la-creme-tag-design.html" class="work-link-block worklinkblock2col w-inline-block">
         <div class="work1 work-la-creme-labels"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -303,7 +313,7 @@
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
-      <a href="work/oasis-logo-design.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/oasis-logo-design.html" class="work-link-block w-inline-block">
         <div class="work1 work-oasis-logo"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -313,7 +323,7 @@
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
-      <a href="work/the-legends-at-indian-springs-brochure-design.html" class="work-link-block w-inline-block">
+      <a href="work/the-legends-at-indian-springs-brochure-design.html" class="work-link-block worklinkblock2col w-inline-block">
         <div class="work1 work-legends-brochure"></div>
         <div class="div-block-7">
           <div class="div-block-5">
@@ -323,22 +333,12 @@
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
       </a>
-      <a href="work/la-creme-truck-design.html" class="work-link-block worklinkblock2col w-inline-block">
+      <a href="work/la-creme-truck-design.html" class="work-link-block w-inline-block">
         <div class="work1 work-la-creme-truck"></div>
         <div class="div-block-7">
           <div class="div-block-5">
             <h4 class="work-heading">Truck Design</h4>
             <p class="paragraph-2">La Creme / DeCoty</p>
-          </div>
-          <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
-        </div>
-      </a>
-      <a href="work/trilan-solutions-business-card-design.html" class="work-link-block w-inline-block">
-        <div class="work1 work-trilan-business-card"></div>
-        <div class="div-block-7">
-          <div class="div-block-5">
-            <h4 class="work-heading">Business Card Design</h4>
-            <p class="paragraph-2">Trilan Solutions</p>
           </div>
           <div class="div-block-6"><img src="images/right-arrow.png" loading="lazy" srcset="images/right-arrow-p-500.png 500w, images/right-arrow.png 512w" sizes="(max-width: 479px) 7vw, (max-width: 767px) 4vw, (max-width: 991px) 3vw, 2vw" alt=""></div>
         </div>
